--- a/Html_CSS/grid_1/css/styles.css
+++ b/Html_CSS/grid_1/css/styles.css
@@ -3,42 +3,54 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-body {
-    width: 100vw;
+body{
+    width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 200px 1fr;
-    grid-template-areas: "header header"
-        "nav main" "nav footer";
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 8fr 1fr;
+    gap: 10px;
+    grid-template-areas: "header header div" "nav main main " "nav footer footer";
+    
 }
-
-
-header {
+header{
     grid-area: header;
-    background-color: red;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    height: 120px;
+    height: 10vh;
+    border: 1px solid green;
 }
 
-nav {
+.ads{
+    grid-area: div;
+    /* border: 1px solid red; */
+}
+nav{
     grid-area: nav;
-    background-color: pink;
-
+    border: 1px solid;
 }
-
-main {
+main{
     grid-area: main;
-    background-color: green;
-    display: grid;
-    grid-column: 100%;
-
+    
+    
 }
-
-footer {
+section{
+    height: 100%;
+    width: 100%;
+    border: 1px solid red;
+    display: grid;
+    grid-column: 1fr 1fr;
+    grid-row: 1fr 1fr 1fr;
+}
+main .box_1{
+    width: 30vw;
+    border: 1px solid ;
+    grid-row-start: 1;
+}
+main .box_2{
+    width: 30vw;
+    border: 1px solid ;
+    grid-row-start: 1;
+}
+footer{
     grid-area: footer;
-    background-color: orangered;
-
+    border: 1px solid blue;
 }
