--- a/Html_CSS/grid_1/css/styles.css
+++ b/Html_CSS/grid_1/css/styles.css
@@ -1,56 +1,97 @@
+:root {
+    --background-color: #BBCCFF;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     width: 100%;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 8fr 1fr;
+    grid-template-rows: 10vh 8fr 1fr;
     gap: 10px;
-    grid-template-areas: "header header div" "nav main main " "nav footer footer";
-    
-}
-header{
-    grid-area: header;
-    height: 10vh;
-    border: 1px solid green;
+    grid-template-areas:
+        "header header div"
+        "nav main main"
+        "nav footer footer";
 }
 
-.ads{
+header {
+    grid-area: header;
+    background-color: var(--background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ads {
     grid-area: div;
-    /* border: 1px solid red; */
+    background-color: var(--background-color);
 }
-nav{
+
+nav {
     grid-area: nav;
-    border: 1px solid;
+    background-color: var(--background-color);
 }
-main{
+
+main {
     grid-area: main;
-    
-    
-}
-section{
-    height: 100%;
-    width: 100%;
-    border: 1px solid red;
+    background-color: var(--background-color);
     display: grid;
-    grid-column: 1fr 1fr;
-    grid-row: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    align-content: start;
 }
-main .box_1{
-    width: 30vw;
-    border: 1px solid ;
-    grid-row-start: 1;
+
+main section {
+    width: 80%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
 }
-main .box_2{
-    width: 30vw;
-    border: 1px solid ;
-    grid-row-start: 1;
+
+article {
+    width: 100%;
+    padding: 5px 20px;
+    background-color: #fff;
 }
-footer{
+
+article h2 {
+    margin: 20px 0;
+}
+
+footer {
     grid-area: footer;
-    border: 1px solid blue;
+    background-color: var(--background-color);
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "header"
+            "nav"
+            "main"
+            "div"
+            "footer";
+    }
+
+    header,
+    nav,
+    main,
+    .ads,
+    footer {
+        width: 100vw;
+    }
+
+    main section {
+        width: 100%;
+      
+    }
 }
