--- a/Html_CSS/grid_1/css/styles.css
+++ b/Html_CSS/grid_1/css/styles.css
@@ -1,7 +1,3 @@
-:root {
-    --background-color: #BBCCFF;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -13,51 +9,56 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 10vh 8fr 1fr;
+    grid-template-rows: 1fr 8fr 1fr;
     gap: 10px;
-    grid-template-areas:
-        "header header div"
-        "nav main main"
-        "nav footer footer";
+    grid-template-areas: "header header div" "nav main main " "nav footer footer";
+
 }
 
 header {
     grid-area: header;
-    background-color: var(--background-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 10vh;
+    background-color: #BBCCFF;
 }
 
 .ads {
     grid-area: div;
-    background-color: var(--background-color);
+    border: 1px solid;
+    background-color: #BBCCFF;
 }
 
 nav {
     grid-area: nav;
-    background-color: var(--background-color);
+    border: 1px solid;
+    background-color: #BBCCFF;
 }
 
 main {
     grid-area: main;
-    background-color: var(--background-color);
-    display: grid;
-    grid-template-columns: 1fr;
-    align-content: start;
+    margin: auto auto;
+    background-color: #BBCCFF;
+    width: 100%;
+    height: 100%;
+    border: 1px solid;
 }
+
 
 main section {
     width: 80%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
+    height: 80%;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 20px;
     align-items: center;
+    margin: auto;
+
+
 }
 
 article {
     width: 100%;
+    height: 80%;
     padding: 5px 20px;
     background-color: #fff;
 }
@@ -67,10 +68,9 @@ article h2 {
 }
 
 footer {
+    background-color: #BBCCFF;
     grid-area: footer;
-    background-color: var(--background-color);
 }
-
 @media screen and (max-width: 768px) {
     body {
         grid-template-columns: 1fr;
@@ -92,6 +92,5 @@ footer {
 
     main section {
         width: 100%;
-      
     }
 }
