--- a/Html_CSS/grid_1/css/styles.css
+++ b/Html_CSS/grid_1/css/styles.css
@@ -23,13 +23,11 @@ header {
 
 .ads {
     grid-area: div;
-    border: 1px solid;
     background-color: #BBCCFF;
 }
 
 nav {
     grid-area: nav;
-    border: 1px solid;
     background-color: #BBCCFF;
 }
 
@@ -39,37 +37,37 @@ main {
     background-color: #BBCCFF;
     width: 100%;
     height: 100%;
-    border: 1px solid;
 }
 
 
 main section {
-    width: 80%;
-    height: 80%;
+    width: 90%;
+    /* height: 30vh; */
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 20px;
-    align-items: center;
-    margin: auto;
-
+    /* justify-content: center; */
+    /* align-items: center; */
+    margin: 138px auto;
 
 }
 
 article {
     width: 100%;
-    height: 80%;
-    padding: 5px 20px;
+    height: 10vh;
+    /* padding: 5px 20px; */
     background-color: #fff;
 }
 
-article h2 {
-    margin: 20px 0;
+main h1 {
+    margin: 20px;
 }
 
 footer {
     background-color: #BBCCFF;
     grid-area: footer;
+    
 }
 @media screen and (max-width: 768px) {
     body {
