--- a/Html_CSS/grid_2/css/styles.css
+++ b/Html_CSS/grid_2/css/styles.css
@@ -5,12 +5,13 @@
     box-sizing: border-box;
 }
 body{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: grid;
     grid-template-columns: repeat(4 ,1fr);
     grid-template-rows: repeat(5, 1fr);
-    gap: 10px;
+    gap: 5px;
+    color: #fff;
 }
 header{
     background-color: #CCCC33;
@@ -51,7 +52,19 @@ nav{
     
 }
 .item7{
-    
+    background-color: #CCCC33;
+    grid-column-start: 2;
+    grid-column-end: 2;
+}
+.item8{
+    background-color: #CCCC33;
+    grid-column-start: 3;
+    grid-column-end: 3;
+}
+.item9{
+    background-color: #CCCC33;
+    grid-column-start: 4;
+    grid-column-end: 4;
 }
 footer{
     background-color: #CCCC33;
