--- a/Html_CSS/cards/css/styles.css
+++ b/Html_CSS/cards/css/styles.css
@@ -3,4 +3,33 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    width: 100vw;
+    height: 100vh;
+}
+.bloc{
 
+    height: 600px;
+    width: 600px;
+    background-color: gray;
+    margin: 60px auto;
+}
+
+.bloc_main {
+	display: inline-block;
+	width: 147px;
+	height: 150px;
+	background-color: black;
+}
+.bloc_anime{
+    background-color: rgba(210, 105, 30, 0.199);
+    transition:  
+                rotate 2s , heigth 2s;
+    
+}
+
+.bloc_anime:hover{
+    border:  3px solid tomato;
+    rotate: 90deg ;
+    height: 50px;
+}
