--- a/Html_CSS/mobile_First/css/styles.css
+++ b/Html_CSS/mobile_First/css/styles.css
@@ -1,30 +1,68 @@
+:root{
+    --main-color: #d1d8e0;
 
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    font-size: 65.2%;
+}
 body{
-    display: grid;
-    gap: 15px;
-    width: 100vw;
-    height: 100vh;
-    grid-template-columns: repeat(10 , 1fr);
-    grid-template-rows: repeat(10, 1fr);
-}
-.box{
-    background-color: #999;
-}
-header{
-    
-}
-main{
+    font-family: Arial, Helvetica, sans-serif;
+font-size: 1.6rem;
+  width: 100vw;
+  height: 100vh;
     
 }
 
-#produits{
+/*header*/
+header{
+    background-color: rgba(100, 100, 100, 0.135);
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    padding: 15px 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+header .logo{
+    font-size: 2.6rem;
+    display: block;
+    margin: auto 0;
+}
+header nav {
+    display: block;
+    margin: auto 0;
+}
+header nav ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+
+}
+header nav ul li{
+    display: inline-block;
+    margin-right: 30px;
+    text-align: center;
+    width: 120px;
     
 }
-footer{
-   
+
+header nav ul li a{
+    text-decoration: none;
+    text-transform: capitalize;
+}
+/*main_content*/
+main {
+    width: 100%;
+    height: 100vh;
+    background-image: url('../img/keenan-barber-KyfeK9uhEKc-unsplash.jpg');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
