--- a/Html_CSS/Meal/css/styles.css
+++ b/Html_CSS/Meal/css/styles.css
@@ -1,1 +1,31 @@
+:root{
+    --mainColor: #444;
+    --secondColor: #F349;
+}
+header{
+    width: 100%;
+    height: 120px;
+    background-color: var(--mainColor);
+}
 
+main{
+    width: 100%;
+    height: 90vh;
+    background-color: var(--secondColor);
+}
+#content{
+    height: 50vh;
+    width: 100%;
+    background-color: var(--mainColor);
+}
+#content_services{
+    height: 50vh;
+    width: 100%;
+    background-color: var(--secondColor);
+}
+
+#footer{
+    height: 20vh;
+    width: 100%;
+    background-color: var(--mainColor);
+}
