--- a/Html_CSS/TP_html_css_js/css/styles.css
+++ b/Html_CSS/TP_html_css_js/css/styles.css
@@ -1,3 +1,26 @@
-button{
+form{
+    width: 70vw;
     border: 1px solid blue;
+    padding: 15px;
+    margin: 10px auto;
+}
+hr{
+    border:  4px soild ;
+}
+span{
+    color:  blue;
+    font-weight: bold;
+}
+input{
+    border: 1px solid blue;
+    height: 30px;
+    padding-left: 10px;
+}
+
+button{
+    color: blue;
+    border: 1px solid blue;
+    height: 30px;
+    background-color: rgb(221, 221, 221);
+    /* border-inline: none; */
 }
