--- a/JS/intervalles_temporelles/assets/css/styles.css
+++ b/JS/intervalles_temporelles/assets/css/styles.css
@@ -25,3 +25,7 @@ button{
     color: var(--primary-color);
     background-color: var(--secondary-color);
 }
+span{
+    font-weight: bold;
+    color: var(--primary-color);
+}
