--- a/tp_cereals/assets/css/styles.css
+++ b/tp_cereals/assets/css/styles.css
@@ -65,11 +65,21 @@ table {
     border-collapse: collapse;
     margin-top: 20px;
 }
-
+thead {
+    background-color: var(--color4);
+    color: var(--color12);
+}
+tbody tr:hover{
+    background-color: #444;
+}
+tbody tr td:first-child{
+    color: var(--color12);
+    background-color: #444;
+  
+}
 th,
 td {
     border: 1px solid #ccc;
-    
     padding: 8px;
     text-align: left;
 }
